<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMVDriverDisplay</string>
    <string name="menu_Home">Home</string>
    <string name="menu_Display">Display</string>
    <string name="menu_Configure">Configure</string>
     <string name="menu_Help">Help</string>
    
    <string name="title_activity_main">MSOE Data Display</string>
    <string name="btnDiagnostics">Diagnostics</string>
    <string name="mph">MPH\n%s</string>
    <string name="mpg">MPG\n%s</string>
    <string name="amph">Average MPH\n%s</string>
    <string name="rpm">RPM\n%s</string>
    <string name="battery">Battery Voltage: %s</string>
    <string name="lblLogger">Data Logger</string>
    <string name="strNewLog">New Log</string>
    <string name="strToggleLogger">Toggle Logger</string>
    <string name="configLogRate">125</string>
    <string name="configArdunioUUID">00001101-0000-1000-8000-00805F9B34FB</string>
    <string name="configRefreshRate">250</string>
    <string name="configArdunioAddress">00:11:22:AA:BB:CC</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="strHomeTitle">Home</string>
    <string name="btnDisplayScreen">Display</string>
    <string name="btnConfigScreen">Configure</string>
    <string name="btnHelpScreen">Help</string>

    
    <string name="lblAddress">Arduino Address</string>
    <string name="lblUUID">Arduino UUID</string>
    <string name="lblRefreshRate">Refresh Rate</string>
    <string name="lblLogRate">Log Rate</string>
    <string name="lblLogLocation">Log Location</string>	
    
    <string name="lblConfigure">I like it when you configure me...</string>
    
    <string name="btnOk">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnDefualt">Defualt</string>
    <string name="strSave">Save</string>
    
</resources>