<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/configLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/addressLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAddress" />

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/UUIDLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblUUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblUUID" />

        <EditText
            android:id="@+id/editUUIDHigh"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editUUIDLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/refreshRateLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblRefreshRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblRefreshRate" />

        <EditText
            android:id="@+id/editRefershRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logRateLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblLogRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblLogRate" />

        <EditText
            android:id="@+id/editLogRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logLocationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblLogLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblLogLocation" />

        <EditText
            android:id="@+id/editLogLocation"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textUri" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/qouteLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblQoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblConfigure"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
 
    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveConfig"
            android:text="@string/btnOk" />

        <Button
            android:id="@+id/btnDefualts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="loadDefaultConfigs"
            android:text="@string/btnDefualt" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelConfig"
            android:text="@string/btnCancel" />

    </LinearLayout>

</LinearLayout>